--- a/requirements.yml
+++ b/requirements.yml
@@ -10,9 +10,15 @@ dependencies:
   - abseil-cpp=20210324.2=h9c3ff4c_0
   - absl-py=0.15.0=pyhd8ed1ab_0
   - aiohttp=3.7.4.post0=py39h3811e60_1
+  - appdirs=1.4.4=pyh9f0ad1d_0
   - astunparse=1.6.3=pyhd8ed1ab_0
   - async-timeout=3.0.1=py_1000
   - attrs=21.2.0=pyhd8ed1ab_0
+  - autopep8=1.6.0=pyhd8ed1ab_1
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - biopython=1.79=py39h3811e60_1
   - blinker=1.4=py_1
   - brotlipy=0.7.0=py39h3811e60_1003
   - c-ares=1.18.1=h7f98852_0
@@ -24,12 +30,18 @@ dependencies:
   - cffi=1.15.0=py39h4bc2ebd_0
   - chardet=4.0.0=py39hf3d152e_2
   - click=8.0.3=py39hf3d152e_1
+  - colorama=0.4.4=pyh9f0ad1d_0
   - cryptography=35.0.0=py39h95dcef6_2
   - cudatoolkit=11.5.0=h36ae40a_9
   - cudnn=8.2.1.32=h86fa8c9_0
   - dataclasses=0.8=pyhc8e2a94_3
+  - debugpy=1.5.1=py39he80948d_0
+  - decorator=5.1.0=pyhd8ed1ab_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - enum34=1.1.10=py39hde42818_2
   - gast=0.4.0=pyh9f0ad1d_0
   - giflib=5.2.1=h36c2ea0_2
+  - git-lfs=3.0.2=ha770c72_0
   - google-auth=1.35.0=pyh6c4a22f_0
   - google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
   - google-pasta=0.2.0=pyh8c360ce_0
@@ -40,7 +52,13 @@ dependencies:
   - icu=68.2=h9c3ff4c_0
   - idna=2.10=pyh9f0ad1d_0
   - importlib-metadata=4.8.1=py39hf3d152e_1
+  - ipykernel=6.4.2=py39hef51801_0
+  - ipython=7.29.0=py39hef51801_1
+  - ipython_genutils=0.2.0=py_1
+  - jedi=0.18.0=py39hf3d152e_3
   - jpeg=9d=h36c2ea0_0
+  - jupyter_client=7.0.6=pyhd8ed1ab_0
+  - jupyter_core=4.9.1=py39hf3d152e_0
   - keras=2.6.0=pyhd8ed1ab_0
   - keras-preprocessing=1.1.2=pyhd8ed1ab_0
   - kmer-jellyfish=2.3.0=h7d875b9_2
@@ -61,29 +79,45 @@ dependencies:
   - libopenblas=0.3.18=pthreads_h8fe5266_0
   - libpng=1.6.37=h21135ba_2
   - libprotobuf=3.16.0=h780b84a_0
+  - libsodium=1.0.18=h36c2ea0_1
   - libssh2=1.10.0=ha56f1ee_2
   - libstdcxx-ng=11.2.0=he4da1e4_11
   - libzlib=1.2.11=h36c2ea0_1013
   - markdown=3.3.4=pyhd8ed1ab_0
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
   - multidict=5.2.0=py39h3811e60_1
+  - ncbi-genome-download=0.3.0=pyh864c0ab_1
   - nccl=2.11.4.1=hdc17891_0
   - ncurses=6.2=h58526e2_4
+  - nest-asyncio=1.5.1=pyhd8ed1ab_0
   - numpy=1.19.5=py39hdbf815f_2
   - oauthlib=3.1.1=pyhd8ed1ab_0
   - openssl=1.1.1l=h7f98852_0
   - opt_einsum=3.3.0=pyhd8ed1ab_1
+  - pandas=1.3.4=py39hde0f152_1
+  - parso=0.8.2=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
   - pip=21.3.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.22=pyha770c72_0
   - protobuf=3.16.0=py39he80948d_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
+  - pycodestyle=2.8.0=pyhd8ed1ab_0
   - pycparser=2.20=pyh9f0ad1d_2
+  - pyfaidx=0.6.3.1=pyh5e36f6f_0
+  - pygments=2.10.0=pyhd8ed1ab_0
   - pyjwt=2.3.0=pyhd8ed1ab_0
   - pyopenssl=21.0.0=pyhd8ed1ab_0
   - pysocks=1.7.1=py39hf3d152e_4
   - python=3.9.7=hb7a2778_3_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python-flatbuffers=1.12=pyhd8ed1ab_1
   - python_abi=3.9=2_cp39
+  - pytz=2021.3=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pyzmq=22.3.0=py39h37b5a0c_1
   - re2=2021.09.01=h9c3ff4c_0
   - readline=8.1=h46c0cb4_0
   - requests=2.25.1=pyhd3deb0d_0
@@ -102,15 +136,21 @@ dependencies:
   - tensorflow-estimator=2.6.0=cuda112py39heacc632_2
   - termcolor=1.1.0=py_2
   - tk=8.6.11=h27826a3_1
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tornado=6.1=py39h3811e60_2
+  - tqdm=4.62.3=pyhd8ed1ab_0
+  - traitlets=5.1.1=pyhd8ed1ab_0
   - typing-extensions=3.7.4.3=0
   - typing_extensions=3.7.4.3=py_0
   - tzdata=2021e=he74cb21_0
   - urllib3=1.26.7=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - werkzeug=2.0.1=pyhd8ed1ab_0
   - wheel=0.37.0=pyhd8ed1ab_1
   - wrapt=1.12.1=py39h3811e60_3
   - xz=5.2.5=h516909a_1
   - yarl=1.7.2=py39h3811e60_1
+  - zeromq=4.3.4=h9c3ff4c_1
   - zipp=3.6.0=pyhd8ed1ab_0
   - zlib=1.2.11=h36c2ea0_1013
 prefix: /home/khoidnyds/miniconda3/envs/CS5824
